--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      rel="shortcut icon"
+      href="./images/icons8-web-96.png"
+      type="image/x-icon"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
       rel="stylesheet"
     />
@@ -60,7 +65,7 @@
                 <span class="desc">Focus Sessions</span>
               </div>
               <div>
-                <span class="status">95%</span><br />
+                <span class="rate">95%</span><br />
                 <span class="desc">Satisfaction Rate</span>
               </div>
             </div>
