--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <title>Assignment-01</title>
   </head>
   <body>
+    <!-- nav section start -->
     <section class="nav-section">
       <nav>
         <div class="nav-logo">
@@ -36,188 +37,193 @@
         </div>
       </div>
     </section>
-    <section class="head-section">
-      <section class="action-section">
-        <div class="action-title">
-          <h2 class="text-title">See It in Action</h2>
-          <p>
-            Explore the live preview and imagine your brand in this bold new
-            look.
-          </p>
-          <button class="btn">Launch live preview</button>
-        </div>
-        <div>
-          <img class="action-img" src="./images/wc-mini.png" alt="" />
-        </div>
-      </section>
-      <section class="user-section">
-        <div class="user-addjust">
-          <div class="user-container">
-            <div class="user-title">Joined Thousands of Productive Users</div>
-            <div class="user-content">
-              <div>
-                <span class="rate">50k</span> <br />
-                <span class="desc">Active Users</span>
-              </div>
-
-              <div>
-                <span class="rate">2M+</span> <br />
-                <span class="desc">Focus Sessions</span>
-              </div>
-              <div>
-                <span class="rate">95%</span><br />
-                <span class="desc">Satisfaction Rate</span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="card-container">
-        <h1 class="user-title card-head">What our users say</h1>
-        <div class="user-card">
-          <div class="user-feedback">
-            <div class="user-rate">
-              <img src="./images/icon-star.png" alt="" />
-              <img src="./images/icon-star.png" alt="" />
-              <img src="./images/icon-star.png" alt="" />
-              <img src="./images/icon-star.png" alt="" />
-              <img src="./images/icon-star.png" alt="" />
-              <img src="./images/icon-star.png" alt="" />
-              <h3>Loved by Designers</h3>
-              <p>
-                This template instantly leveled up our presence.” – Studio
-                Vertex
-              </p>
-              <div class="date">
-                <img class="card-img" src="./images/avatar.png" alt="" />
-                <div class="img-desc">
-                  <span class="card-img-name">Reviewer name</span> <br />
-                  Date
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="user-feedback">
-            <div class="user-rate">
-              <img src="./images/icon-star.png" alt="" />
-              <img src="./images/icon-star.png" alt="" />
-              <img src="./images/icon-star.png" alt="" />
-              <img src="./images/icon-star.png" alt="" />
-              <img src="./images/icon-star.png" alt="" />
-              <img src="./images/icon-star.png" alt="" />
-              <h3>Loved by Designers</h3>
-              <p>
-                This template instantly leveled up our presence.” – Studio
-                Vertex
-              </p>
-              <div class="date">
-                <img class="card-img" src="./images/avatar.png" alt="" />
-                <div class="img-desc">
-                  <span class="card-img-name">Reviewer name</span> <br />
-                  Date
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="user-feedback">
-            <div class="user-rate">
-              <img src="./images/icon-star.png" alt="" />
-              <img src="./images/icon-star.png" alt="" />
-              <img src="./images/icon-star.png" alt="" />
-              <img src="./images/icon-star.png" alt="" />
-              <img src="./images/icon-star.png" alt="" />
-              <img src="./images/icon-star.png" alt="" />
-              <h3>Loved by Designers</h3>
-              <p>
-                This template instantly leveled up our presence.” – Studio
-                Vertex
-              </p>
-              <div class="date">
-                <img class="card-img" src="./images/avatar.png" alt="" />
-                <div class="img-desc">
-                  <span class="card-img-name">Reviewer name</span> <br />
-                  Date
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="user-feedback">
-            <div class="user-rate">
-              <img src="./images/icon-star.png" alt="" />
-              <img src="./images/icon-star.png" alt="" />
-              <img src="./images/icon-star.png" alt="" />
-              <img src="./images/icon-star.png" alt="" />
-              <img src="./images/icon-star.png" alt="" />
-              <img src="./images/icon-star.png" alt="" />
-              <h3>Loved by Designers</h3>
-              <p>
-                This template instantly leveled up our presence.” – Studio
-                Vertex
-              </p>
-              <div class="date">
-                <img class="card-img" src="./images/avatar.png" alt="" />
-                <div class="img-desc">
-                  <span class="card-img-name">Reviewer name</span> <br />
-                  Date
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="challenges-container">
-        <div class="challenges-content">
-          <h1 class="user-title challenges-title">Ready to focus better</h1>
-          <p class="img-desc">
-            This template instantly leveled up our presence.” – Studio Vertex
-          </p>
-          <button class="btn challenges-btn">Get Started Free</button> <br />
-          <img class="challenges-img" src="./images/wc-big.png" alt="" />
-        </div>
-      </section>
-      <section class="footer">
-        <div class="footer-container">
-          <div class="footer-title">
-            <h1 class="user-title">Let’s Get in Touch</h1>
-          </div>
-          <div class="footer-form">
-            <form>
-              <div class="email">
-                <label for="email">Email</label>
-                <input
-                  class="label"
-                  placeholder="your email"
-                  type="email"
-                  name="email"
-                  id=""
-                />
-              </div>
-              <div class="email">
-                <label for="name">Name</label>
-                <input
-                  class="label"
-                  placeholder="your name"
-                  type="name"
-                  name="name"
-                />
-              </div>
-              <div class="email">
-                <label for="textarea">Message</label>
-                <textarea
-                  cols="21"
-                  rows="7"
-                  class="label"
-                  placeholder="write your message"
-                  name="textarea"
-                  id=""
-                ></textarea>
-              </div>
-            </form>
-          </div>
-        </div>
-      </section>
+    <!-- nav section end -->
+    <!-- action section start -->
+    <section class="action-container">
+      <div class="action-title">
+        <h2 class="text-title">See It in Action</h2>
+        <p>
+          Explore the live preview and imagine your brand in this bold new look.
+        </p>
+        <button class="btn">Launch live preview</button>
+      </div>
+      <div>
+        <img class="action-img" src="./images/wc-mini.png" alt="" />
+      </div>
     </section>
-    <section>
+    <!-- action section end -->
+    <!-- user section start -->
+    <section class="user-section">
+      <div class="user-addjust">
+        <div class="user-container">
+          <div class="user-title">Joined Thousands of Productive Users</div>
+          <div class="user-content">
+            <div>
+              <span class="rate">50k</span> <br />
+              <span class="desc">Active Users</span>
+            </div>
+
+            <div>
+              <span class="rate">2M+</span> <br />
+              <span class="desc">Focus Sessions</span>
+            </div>
+            <div>
+              <span class="rate">95%</span><br />
+              <span class="desc">Satisfaction Rate</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- user section end -->
+    <!-- card section start -->
+    <section class="card-container">
+      <h1 class="user-title card-head">What our users say</h1>
+      <div class="user-card">
+        <div class="user-feedback">
+          <div class="user-rate">
+            <img src="./images/icon-star.png" alt="" />
+            <img src="./images/icon-star.png" alt="" />
+            <img src="./images/icon-star.png" alt="" />
+            <img src="./images/icon-star.png" alt="" />
+            <img src="./images/icon-star.png" alt="" />
+            <img src="./images/icon-star.png" alt="" />
+            <h3>Loved by Designers</h3>
+            <p>
+              This template instantly leveled up our presence.” – Studio Vertex
+            </p>
+            <div class="date">
+              <img class="card-img" src="./images/avatar.png" alt="" />
+              <div class="img-desc">
+                <span class="card-img-name">Reviewer name</span> <br />
+                Date
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="user-feedback">
+          <div class="user-rate">
+            <img src="./images/icon-star.png" alt="" />
+            <img src="./images/icon-star.png" alt="" />
+            <img src="./images/icon-star.png" alt="" />
+            <img src="./images/icon-star.png" alt="" />
+            <img src="./images/icon-star.png" alt="" />
+            <img src="./images/icon-star.png" alt="" />
+            <h3>Loved by Designers</h3>
+            <p>
+              This template instantly leveled up our presence.” – Studio Vertex
+            </p>
+            <div class="date">
+              <img class="card-img" src="./images/avatar.png" alt="" />
+              <div class="img-desc">
+                <span class="card-img-name">Reviewer name</span> <br />
+                Date
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="user-feedback">
+          <div class="user-rate">
+            <img src="./images/icon-star.png" alt="" />
+            <img src="./images/icon-star.png" alt="" />
+            <img src="./images/icon-star.png" alt="" />
+            <img src="./images/icon-star.png" alt="" />
+            <img src="./images/icon-star.png" alt="" />
+            <img src="./images/icon-star.png" alt="" />
+            <h3>Loved by Designers</h3>
+            <p>
+              This template instantly leveled up our presence.” – Studio Vertex
+            </p>
+            <div class="date">
+              <img class="card-img" src="./images/avatar.png" alt="" />
+              <div class="img-desc">
+                <span class="card-img-name">Reviewer name</span> <br />
+                Date
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="user-feedback">
+          <div class="user-rate">
+            <img src="./images/icon-star.png" alt="" />
+            <img src="./images/icon-star.png" alt="" />
+            <img src="./images/icon-star.png" alt="" />
+            <img src="./images/icon-star.png" alt="" />
+            <img src="./images/icon-star.png" alt="" />
+            <img src="./images/icon-star.png" alt="" />
+            <h3>Loved by Designers</h3>
+            <p>
+              This template instantly leveled up our presence.” – Studio Vertex
+            </p>
+            <div class="date">
+              <img class="card-img" src="./images/avatar.png" alt="" />
+              <div class="img-desc">
+                <span class="card-img-name">Reviewer name</span> <br />
+                Date
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- card section end -->
+    <!-- challenges section start -->
+    <section class="challenges-container">
+      <div class="challenges-content">
+        <h1 class="user-title challenges-title">Ready to focus better</h1>
+        <p class="img-desc">
+          This template instantly leveled up our presence.” – Studio Vertex
+        </p>
+        <button class="btn challenges-btn">Get Started Free</button> <br />
+        <img class="challenges-img" src="./images/wc-big.png" alt="" />
+      </div>
+    </section>
+    <!-- challenges section end -->
+    <!-- form section start -->
+    <section class="footer">
+      <div class="footer-container">
+        <div class="footer-title">
+          <h1 class="user-title">Let’s Get in Touch</h1>
+        </div>
+        <div class="footer-form">
+          <form>
+            <div class="email">
+              <label for="email">Email</label>
+              <input
+                class="label"
+                placeholder="your email"
+                type="email"
+                name="email"
+                id=""
+              />
+            </div>
+            <div class="email">
+              <label for="name">Name</label>
+              <input
+                class="label"
+                placeholder="your name"
+                type="name"
+                name="name"
+              />
+            </div>
+            <div class="email">
+              <label for="textarea">Message</label>
+              <textarea
+                cols="21"
+                rows="7"
+                class="label"
+                placeholder="write your message"
+                name="textarea"
+                id=""
+              ></textarea>
+            </div>
+          </form>
+        </div>
+      </div>
+    </section>
+    <!-- form section end -->
+    <!-- footer section start -->
+    <section class="footer-0.1">
       <div class="divv">
         <div class="footer-section">
           <h1 class="rate footer-head">LOGO</h1>
@@ -238,5 +244,6 @@
         </div>
       </div>
     </section>
+    <!-- footer section end -->
   </body>
 </html>
